Fix: (style) Sub collapsable menu font size against firs level collapsable menu item change

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -3,9 +3,9 @@
 }
 
 .is-sub-group .sidebar-heading {
-  font-size 0.75rem!important
+  font-size 0.7rem!important
 }
 
 .sidebar-link {
-  font-size 0.8rem!important
+  font-size 0.85rem!important
 }
